# python-gcp-linebot

./: .env.sample  .gitignore  Dockerfile  README.md  cloudbuild.yaml  compose.yml  pyproject.toml
app/: config.py  main.py  utils.py
app/facades/: chatgpt.py  myna_api.py
app/facades/line_bot/: __init__.py  line_message.py
app/facades/storage/: __init__.py  thumbnail.py
app/models/broadcast/: broadcast.py
app/models/user/: domain.py  update_user_report.py
app/models/user_report/: domain.py  entry_user_report.py  get_user_reports.py  list_user_reports.py  post_user_report.py  update_user_report.py
app/models/user_report_feedback/: domain.py  entry_user_report_feedback.py  entry_user_report_feedback_reaction.py
app/repositories/: __init__.py  user.py  user_report.py
app/routes/: broadcast_route.py  line_bot_callback_route.py  user_report_feedback_route.py  user_report_route.py  user_route.py
app/services/report/: entry_user_report_service.py  list_user_report_service.py  update_user_report_service.py
app/services/report_feedback/: entry_user_report_feedback_comment_service.py  entry_user_report_feedback_reaction_service.py
app/services/user/: put_user_service.py
terraform/: .gitignore  .terraform.lock.hcl  env.sh  init.sh  main.tf  provider.tf  variables.tf
terraform/module/api/: main.tf
terraform/module/artifactregistory/: main.tf
terraform/module/cloudbuild/: main.tf
terraform/module/cloudrun/: main.tf
terraform/module/iam/: main.tf
tests/: test_add_report.py  test_user.py  test_user_reports.py  test_user_reports_feedback.py
(+1 files in other folders)
